# QWIZZ_backend

./: .gitignore  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
app/: gunicorn.conf.py  postgres
app/api/: __init__.py  admin.py  apps.py  document_reader.py  models.py  receivers.py  serializers.py  signals.py  views.py
app/api/management/commands/: createsuperuser2.py
app/api/templates/: chat_template.html  landing_page.html  sample_doc.txt
app/app/: settings.py  urls.py
app/haystack_wrappers/: doc_explorer.py  doc_handler.py  helper_agent.py  intent_classifier.py  qna_agent.py  quotes_retriever.py  utils.py  wrapper.py
app/haystack_wrappers/haystack_custom/: __init__.py  multi_doc_embedding_retriever.py  prompt_router.py  question_generator.py  tools.py
app/users/: models.py  serializers.py  urls.py  views.py
app/utils/: exceptions.py  logs.py
